--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "typeahead-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "start.js",
   "scripts": {
-    "test": "",
-    "start": "node index.js"
+    "test": "NAMES_FILE=test.json node start.js & ./node_modules/.bin/mocha test.js",
+    "start": "NAMES_FILE=names.json node start.js"
   },
   "author": "Otmane Benazzou",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "mocha": "^6.2.0",
+    "should": "^13.2.3",
+    "supertest": "^4.0.2"
   }
 }
